<?xml version="1.0" encoding="utf-8"?>
<!-- Root layout for item details screen, using RelativeLayout for flexible positioning -->
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_inventory_item"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="GridItem" >

    <!-- Label for the item name input field -->
    <TextView
        android:id="@+id/item_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/item_name_input"
        android:text="@string/item_name_label"
        android:textAllCaps="true"
        android:labelFor="@id/item_name_input" />

    <!-- Input field for item name -->
    <EditText
        android:id="@+id/item_name_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/item_qty_label"
        android:layout_marginBottom="16dp"
        android:autofillHints="{@value #AUTOFILL_HINT_NOT_APPLICABLE}"
        android:inputType="text"
        android:minHeight="48dp" />

    <TextView
        android:id="@+id/item_qty_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:text="@string/item_qty_label"
        android:textAllCaps="true"
        android:labelFor="@id/item_qty_input" />

    <!-- Container for item quantity input and buttons to increase/decrease quantity -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/item_qty_input_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_below="@id/item_qty_label"
        android:orientation="horizontal">

        <!-- Input field for item quantity -->
        <EditText
            android:id="@+id/item_qty_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints="{@value #AUTOFILL_HINT_NOT_APPLICABLE}"
            android:inputType="number"
            android:minHeight="48dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/item_qty_decrease"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Custom button to increase item quantity, similar to decrease button in terms of creation and use -->
        <ImageView
            android:id="@+id/item_qty_decrease"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:clickable="true"
            android:contentDescription="@string/item_qty_decrease_button"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/item_qty_increase"
            app:layout_constraintStart_toEndOf="@+id/item_qty_input"
            app:srcCompat="@drawable/icon_remove" />

        <ImageView
            android:id="@+id/item_qty_increase"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:clickable="true"
            android:contentDescription="@string/item_qty_increase_button"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/item_qty_decrease"
            app:srcCompat="@drawable/icon_add" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Container for action buttons like remove and save, using ConstraintLayout for precise positioning -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/item_update_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/item_qty_input_group"
        android:orientation="horizontal" >

        <!-- Custom 'Remove Item' button, background set to null for a flat look, icon designed in Figma -->
        <ImageButton
            android:id="@+id/remove_item_link"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:gravity="center_vertical"
            android:clickable="true"
            android:src="@drawable/remove_item"
            android:background="@null"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/save_item"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_chainStyle="spread_inside" />

        <!-- Custom 'Save Item' button, follows similar customization as the 'Remove Item' button -->
        <ImageButton
            android:id="@+id/save_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/save_item"
            android:background="@null"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/remove_item_link" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Custom 'Back' button to return to the previous screen, placed below the action buttons -->
    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/item_update_group"
        android:layout_marginTop="19dp"
        android:background="@null"
        android:src="@drawable/back_return"/>

</RelativeLayout>